chore: updated the ZTC and ZRC OpenAPI specs; work in progress